; ModuleID = '/home/carl/AnghaBench/tmux/extr_cmd-list-panes.c_cmd_list_panes_exec.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_cmd-list-panes.c_cmd_list_panes_exec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmd = type { %struct.args* }
%struct.args = type { i32 }
%struct.cmdq_item = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.winlink*, %struct.session* }
%struct.winlink = type { i32 }
%struct.session = type { i32 }

@CMD_RETURN_NORMAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cmd*, %struct.cmdq_item*)* @cmd_list_panes_exec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmd_list_panes_exec(%struct.cmd* %0, %struct.cmdq_item* %1) #0 {
  %3 = alloca %struct.cmd*, align 8
  %4 = alloca %struct.cmdq_item*, align 8
  %5 = alloca %struct.args*, align 8
  %6 = alloca %struct.session*, align 8
  %7 = alloca %struct.winlink*, align 8
  store %struct.cmd* %0, %struct.cmd** %3, align 8
  store %struct.cmdq_item* %1, %struct.cmdq_item** %4, align 8
  %8 = load %struct.cmd*, %struct.cmd** %3, align 8
  %9 = getelementptr inbounds %struct.cmd, %struct.cmd* %8, i32 0, i32 0
  %10 = load %struct.args*, %struct.args** %9, align 8
  store %struct.args* %10, %struct.args** %5, align 8
  %11 = load %struct.cmdq_item*, %struct.cmdq_item** %4, align 8
  %12 = getelementptr inbounds %struct.cmdq_item, %struct.cmdq_item* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load %struct.session*, %struct.session** %13, align 8
  store %struct.session* %14, %struct.session** %6, align 8
  %15 = load %struct.cmdq_item*, %struct.cmdq_item** %4, align 8
  %16 = getelementptr inbounds %struct.cmdq_item, %struct.cmdq_item* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load %struct.winlink*, %struct.winlink** %17, align 8
  store %struct.winlink* %18, %struct.winlink** %7, align 8
  %19 = load %struct.args*, %struct.args** %5, align 8
  %20 = call i64 @args_has(%struct.args* %19, i8 signext 97)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %2
  %23 = load %struct.cmd*, %struct.cmd** %3, align 8
  %24 = load %struct.cmdq_item*, %struct.cmdq_item** %4, align 8
  %25 = call i32 @cmd_list_panes_server(%struct.cmd* %23, %struct.cmdq_item* %24)
  br label %42

26:                                               ; preds = %2
  %27 = load %struct.args*, %struct.args** %5, align 8
  %28 = call i64 @args_has(%struct.args* %27, i8 signext 115)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %35

30:                                               ; preds = %26
  %31 = load %struct.cmd*, %struct.cmd** %3, align 8
  %32 = load %struct.session*, %struct.session** %6, align 8
  %33 = load %struct.cmdq_item*, %struct.cmdq_item** %4, align 8
  %34 = call i32 @cmd_list_panes_session(%struct.cmd* %31, %struct.session* %32, %struct.cmdq_item* %33, i32 1)
  br label %41

35:                                               ; preds = %26
  %36 = load %struct.cmd*, %struct.cmd** %3, align 8
  %37 = load %struct.session*, %struct.session** %6, align 8
  %38 = load %struct.winlink*, %struct.winlink** %7, align 8
  %39 = load %struct.cmdq_item*, %struct.cmdq_item** %4, align 8
  %40 = call i32 @cmd_list_panes_window(%struct.cmd* %36, %struct.session* %37, %struct.winlink* %38, %struct.cmdq_item* %39, i32 0)
  br label %41

41:                                               ; preds = %35, %30
  br label %42

42:                                               ; preds = %41, %22
  %43 = load i32, i32* @CMD_RETURN_NORMAL, align 4
  ret i32 %43
}

declare dso_local i64 @args_has(%struct.args*, i8 signext) #1

declare dso_local i32 @cmd_list_panes_server(%struct.cmd*, %struct.cmdq_item*) #1

declare dso_local i32 @cmd_list_panes_session(%struct.cmd*, %struct.session*, %struct.cmdq_item*, i32) #1

declare dso_local i32 @cmd_list_panes_window(%struct.cmd*, %struct.session*, %struct.winlink*, %struct.cmdq_item*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
